Swagger updates for posts and replies
